Fixed stretched image

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 img {
+    align-self: start;
     height: 100px;
     width: auto;
 }
